add category and bug fix

--- a/Template/chunks/_head.phtml
+++ b/Template/chunks/_head.phtml
@@ -11,3 +11,4 @@
 <script type="text/javascript" src="<?php echo Core_App::getBaseUrl().'static/function.js' ?>"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="1066190701533-8ik93mv099jahiu4b8hcet29bkucojvt.apps.googleusercontent.com">
+<link href="/uploads/favicon.ico" rel="shortcut icon" type="image/x-icon" />
