--- a/Template/chunks/_menu.phtml
+++ b/Template/chunks/_menu.phtml
@@ -1,7 +1,6 @@
-<div class="head" id="stick_menu"><a class="button-home" href="<?php echo Core_App::getBaseUrl()?>">Домой</a>
-    <form class="search" action="<?php echo Core_App::getBaseUrl() ?>search/" method="get">
-        <input class="search_query" type="text" name="query">
-        <input class="search_submit" type="submit" value="Найти">
-    </form>
+<div class="head" id="stick_menu">
+    <a class="button-home" href="<?php echo Core_App::getBaseUrl()?>">Домой</a>
+    <a class="button-home" href="<?php echo Core_App::getBaseUrl()?>category/">Категории</a>
+    <a class="button-home" href="<?php echo Core_App::getBaseUrl()?>search/">Поиск</a>
 </div>
 <div class="clear">&nbsp;</div>
