--- a/Template/coment.phtml
+++ b/Template/coment.phtml
@@ -34,5 +34,6 @@
     <p>Пока нет ниодного коментария к этому файлу</p>
 <?php endif; ?>
 <?php $this->getChunk('forms/_addComent.phtml')?>
+<?php $this->getChunk('chunks/_footer.phtml') ?>
 </body>
 </html>
