--- a/static/main.css
+++ b/static/main.css
@@ -5,34 +5,36 @@ body {
 
 .table {
     width: 100%;
+    border-collapse: collapse;
 }
 
 .table thead tr td{
     background: #71B3D7;
     height: 30px;
+    border-right: 1px solid green;
+    border-bottom: 1px solid #e86615;
 }
 
-.search {
-    float:right;
-}
+/*.search {*/
+    /*float:;*/
+/*}*/
 
 .search_query {
-    width: 70%;
+    width: 100%;
     height: 30px;
-    float:left;
     border:1px solid #B16113;
     z-index: 15;
 }
 
 .search_submit {
-    width: 30%;
+    width: 100%;
+    margin:auto;
     height: 30px;
     float:left;
     background: rgba(255, 108, 22, 1);
     border: 1px solid #B16113;
     color: white;
     border-radius: 5px;
-    margin-left: -15px;
     z-index: 1;
 
 }
@@ -99,6 +101,24 @@ hr {
 
 .table tbody {
     background: #f9f9ff;
+}
+
+.nochet {
+    background: #f3d8bd !important;
+}
+
+.table tbody tr td {
+    border-right: 1px solid green;
+    background: #f7f9f9;
+}
+
+.table tbody tr td a {
+    text-decoration: none;
+    color: #0550B1;
+}
+
+.table tbody tr td a:hover {
+    color: red;
 }
 
 .upload fieldset textarea {
