--- a/Template/forms/_form.phtml
+++ b/Template/forms/_form.phtml
@@ -3,7 +3,7 @@
     <fieldset>
         <legend>Выберите фаил и нажмите загрузить</legend>
         <input class="file_upload" type="file" name="fileUpload">
-        Име файла:
+        Имя файла:
         <input class="text-input" type="text" name="name">
         Категория файла:
         <select name="category">
