--- a/Template/result/success.phtml
+++ b/Template/result/success.phtml
@@ -6,7 +6,7 @@
 <body>
 <p>Фаил загружен, он доступен по ссылке <a href="<?php echo $this->getUrlFile() ?>"><?php echo $this->getNameFile() ?></a></p>
 <?php $this->getLastId() ?>
-<p>Так же вы можете просмотреть страниццу файла<a href="<?php echo Core_App::getBaseUrl().'viewfile/fileId/'.$this->getLastId() ?>">Страница файла</a></p>
+<p>Так же вы можете просмотреть страницу файла <a href="<?php echo Core_App::getBaseUrl().'viewfile/fileId/'.$this->getLastId() ?>">Страница файла</a></p>
 Вы можете скопировать ссылку из текстового поля ниже:
 <textarea style="width: 100%"><?php echo $this->getUrlFile() ?></textarea>
 Вы можете скопировать ссылку на страницу файла:
