--- a/Template/chunks/_footer.phtml
+++ b/Template/chunks/_footer.phtml
@@ -15,7 +15,6 @@
             alt="HotLog"></a>
 </noscript>
 <!-- /HotLog -->
-<script type="text/javascript" src="http://mobtop.ru/c/106580.js"></script><noscript><a href="http://mobtop.ru/in/106580"><img src="http://mobtop.ru/106580.gif" alt="MobTop.Ru - Рейтинг и статистика мобильных сайтов"/></a></noscript>
 <!--LiveInternet counter--><script type="text/javascript"><!--
     document.write("<a href='//www.liveinternet.ru/click' "+
         "target=_blank><img src='//counter.yadro.ru/hit?t12.6;r"+
@@ -37,3 +36,23 @@
 
 </noscript>
 <!-- end of Top100 code -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- host-most -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8664222405591769"
+     data-ad-slot="5348850335"
+     data-ad-format="auto"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- host-most2 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:100px"
+     data-ad-client="ca-pub-8664222405591769"
+     data-ad-slot="8302316732"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
