--- a/static/main.css
+++ b/static/main.css
@@ -15,10 +15,6 @@ body {
     border-bottom: 1px solid #e86615;
 }
 
-/*.search {*/
-    /*float:;*/
-/*}*/
-
 .search_query {
     width: 100%;
     height: 30px;
@@ -75,7 +71,7 @@ h1 {
 
 .head {
     position: fixed;
-    display: block;
+    /*display: block;*/
     /*opacity: 0.75;*/
     background: #0091B1;
     top:0px;
@@ -171,12 +167,13 @@ hr {
 .button-home {
     color: #e5e2d2;
     background: #ff6c16;
-    height: 30px !important;
+    /*height: 30px !important;*/
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
     text-decoration: none;
-    padding: 3px;
+    /*padding: 3px;*/
+    font-size: 20px;
 }
 
 .button-home:hover {
