--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
     margin:auto;
-    max-width: 600px;
+    max-width: 900px;
 }
 
 .table {
@@ -122,7 +122,7 @@ hr {
 }
 
 .text-input {
-    width: 100%;
+    width: 98%;
 }
 .text-input-preview {
     width: 100%;
@@ -178,4 +178,12 @@ hr {
 
 .button-home:hover {
     background: rgba(232, 102, 21, 1);
+}
+
+.create_contact input {
+    width:97%;
+}
+
+.checkbox {
+    right: auto;
 }
