--- a/Template/default/chunks/_menu.phtml
+++ b/Template/default/chunks/_menu.phtml
@@ -1,5 +1,6 @@
 <div class="head" id="stick_menu">
     <a class="button-home" href="<?php echo Core_App::getBaseUrl()?>">Home</a>
     <a class="button-home" href="<?php echo Core_App::getBaseUrl()?>contact/create/">Create contact</a>
+    <a class="button-home" href="<?php echo Core_App::getBaseUrl()?>contact/addAttribute">Create attribute</a>
 </div>
 <div class="clear">&nbsp;</div>
